# valar

./: .gitignore  Cargo.toml  Makefile  rustfmt.toml
.github/workflows/: ci.yml
crates/: README.md
crates/valar/: Cargo.toml  README.md
crates/valar-bot/: Cargo.toml
crates/valar-bot/src/: lib.rs
crates/valar-bot/src/adapter/: mod.rs
crates/valar-bot/src/adapter/telegram/: mod.rs
crates/valar-bot/src/adapter/telegram/handler/: mod.rs
crates/valar-bot/src/adapter/telegram/layers/: mod.rs
crates/valar-bot/src/adapter/telegram/layers/from_fn/: mod.rs
crates/valar-bot/src/adapter/telegram/listener/: mod.rs  webhook.rs
crates/valar-bot/src/valarbot/: mod.rs
crates/valar-bot/src/valarbot/bot/: context.rs  mod.rs
crates/valar-identity/: Cargo.toml
crates/valar-identity/src/: lib.rs
crates/valar-identity/src/domain/value/: email.rs  mod.rs  pii.rs
crates/valar-identity/src/valaridentity/: mod.rs
crates/valar-identity/src/valaridentity/email/: mod.rs
crates/valar-identity/src/valaridentity/user/: mod.rs
crates/valar-macro/: Cargo.toml
crates/valar-macro/src/: lib.rs
crates/valar-macro/src/valarbot/: mod.rs
crates/valar-security/: Cargo.toml
crates/valar-security/src/: lib.rs
crates/valar-security/src/adapter/: mod.rs
crates/valar-security/src/adapter/axum/: mod.rs  request.rs  response.rs  valarsecurity.rs
crates/valar-security/src/handlers/: mod.rs
crates/valar-security/src/handlers/bearer/: error.rs  handler.rs  mod.rs  option.rs  payload.rs  response.rs  state.rs
crates/valar-security/src/handlers/cookie/: error.rs  handler.rs  mod.rs  option.rs  payload.rs  response.rs  state.rs
crates/valar-security/src/handlers/oauth2/: mod.rs
crates/valar-security/src/valarsecurity/: mod.rs
crates/valar-security/src/valarsecurity/authorization/: mod.rs
crates/valar-security/src/valarsecurity/context/: map.rs  mod.rs
crates/valar-security/src/valarsecurity/handler/: mod.rs
crates/valar-security/src/valarsecurity/http/: mod.rs  request.rs  response.rs
crates/valar/src/: lib.rs  main.rs
examples/cf-security-cookie/: Cargo.toml
