[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
edition = "2024"


[workspace.dependencies]
# Internal crates 
valar-bot = { path = "./crates/valar-bot" }
valar-macro = { path = "./crates/valar-macro" }
valar-identity = { path = "./crates/valar-identity" }
valar-security = { path = "./crates/valar-security" }
# External crates
tokio = "1.47.1"
tracing = "0.1.41"
anyhow = "1.0.100"
tower = "0.5.2"
uuid = "1.17.0"
serde = "1.0.226"
serde_json = "1.0.145"
thiserror = "2.0.16"
derive_more = "2.0.1"
derive-new = "0.7.0"
tower-service = "0.3.3"
tracing-subscriber = "0.3.20"

[workspace.lints]


[patch.crates-io]
# Add patch here
