[package]
name = "valar-bot"
keywords = ["bot", "tlib", "telegram-library", "discord-library"]
categories = ["web-programming"]
edition = { workspace = true }


[features]
default = ["full"]
full = ["valar-bot-telegram", "valar-bot-discord"]
valar-bot-telegram = []
valar-bot-discord = []

[lints]
workspace = true


[dependencies]
derive-new = "0.7.0"
hyper = { version = "1.7.0", features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
valar-macro = { workspace = true, features = [
    "valar-bot-discord",
    "valar-bot-telegram",
] }
tokio = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower = { workspace = true, features = ["util"] }
