[package]
name = "valar-macro"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
proc-macro = true

[features]
default = ["full"]
full = ["valar-bot-telegram", "valar-bot-discord"]
valar-bot = []
valar-bot-telegram = []
valar-bot-discord = []

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = "2.0.108"

[lints]
workspace = true
