[package]
name = "valar-security"
version = "0.1.0"
edition = { workspace = true }
license = "MIT"
description = "Authentication and Authorization library written in rust"
keywords = ["authentication", "authorization"]
categories = ["web-programming", "authentication"]


[features]
default = ["axum", "cookie"]
axum = ["dep:axum", "dep:tower-service"]
cookie = []

[dependencies]
# third party crates
http = "1.3.1"
thiserror = { workspace = true }
derive-new = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log-always"] }
axum = { version = "0.8.6", optional = true }
pin-project-lite = "0.2.16"
tower-service = { workspace = true, optional = true }
tower-layer = "0.3.3"

[lints]
workspace = true

[dev-dependencies]
http = "1.3.1"
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
tower = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
