[package]
name = "valar"
license = "MIT"
description = "Open source crates for Rust developers"
readme = "README.md"
homepage = "https://github.com/codetheproject/codora-framework"
documentation = "https://docs.rs/codora-framework"
repository = "https://github.com/codetheproject/codora-framework"
keywords = ["web", "server", "orm", "authentication", "security"]
categories = ["web-programming", "database", "authentication"]
authors = ["West Sheriff <west.sh.mail@gmail.com>"]
edition = { workspace = true }


[dependencies]
